--- a/package.json
+++ b/package.json
@@ -2,13 +2,18 @@
   "name": "binge-next",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:4041",
+  "secure": false,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
     "babel-polyfill": "^6.26.0",
+    "bcrypt": "^4.0.1",
     "bootstrap": "^4.4.1",
+    "cors": "^2.8.5",
     "cross-fetch": "^3.0.4",
+    "mysql": "^2.18.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.2.0",
@@ -16,13 +21,16 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "redux": "^4.0.5",
-    "redux-logger": "^3.0.6"
+    "redux-logger": "^3.0.6",
+    "sanitize": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "dev": "run-p server start",
+    "server": "node server/index.js"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -40,6 +48,13 @@
     ]
   },
   "devDependencies": {
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "express-pino-logger": "^5.0.0",
+    "node-env-run": "^3.0.2",
+    "nodemon": "^2.0.3",
+    "npm-run-all": "^4.1.5",
+    "pino-colada": "^1.6.1",
     "redux-thunk": "^2.3.0"
   }
 }
